--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,10 @@ edition = "2021"
 [dependencies]
 gtk = "0.18.1"
 
+grass = "0.13.2"
+
 async-channel = "2.2.0"
 futures = "0.3.30"
+
+networkmanager = "0.4"
+dbus = "0.9"
